@startuml ArtikelWriteService

package org.springframework.data.mongodb.core {
    class ReactiveFluentMongoOperations
}

package java.utils {
    class UUID
}

package com.acme.artikel {

    package entity {
        class Artikel << entity >>
    }

    package service {
        class ArtikelValidator
        class ArtikelReadService
        interface CreateResult
        interface UpdateResult

        class ArtikelWriteService << control >> << @Serivce >> {
            + suspend create(artikel: Artikel): CreateResult
            + suspend update(artikel: Artikel, id: UUID): UpdateResult
        }

        ArtikelWriteService o-down-> "1" ArtikelValidator
        ArtikelWriteService o--> "1" ArtikelReadService
        ArtikelWriteService .up.> Artikel
        ArtikelWriteService .up.> CreateResult
        ArtikelWriteService .up.> UpdateResult
        ArtikelWriteService .up.> UUID
        ArtikelWriteService o--> "1" ReactiveFluentMongoOperations : mongo

    }
}

hide empty members

@enduml
